...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Username"/>
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="Password" />
        </LinearLayout>

        <Button
            android:id="@+id/sign"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:onClick="sign"
            android:text="Sign in" />

        <Button
            android:id="@+id/register"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
...
