...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/create"
        android:layout_width="124dp"
        android:layout_height="69dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Create Challenge"
        android:onClick="create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
